[package]
name = "practice"
version = "0.1.0"
edition = "2021"

[[bin]]
name="new"
path="src/new.rs"

[[bin]]
name="fib"
path="src/fib.rs"

[[bin]]
name="guess"
path="src/guess.rs"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9.0"
